--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -19,7 +19,8 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
             = link_to 'Выход', destroy_user_session_path, :method => 'delete', class: 'btn btn-default'
         - else
           h1.header-title Всероссийский конкурс красоты Мисс Туризм!
-          / button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="margin: 0 0 16px" Участвовать
+          - if (REGISTRATION_END_DATE - Date.current).to_i > 0
+            button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="width: 250px;margin: 0 0 16px" Участвовать
           button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal3" style="width: 250px;" Голосовать
         = link_to "Хочу на финал", orders_path, class: "btn btn-primary btn-lg", style: "width: 250px;margin: 16px 0 0 0"
 
