--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -109,6 +109,8 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           li Грацию
 
         p Мисс зрительских симпаний будет определена по мнению гостей.
+        p
+          a href="/content/statement.pdf" target="_blank" Положение о конкурсе
 
 /#payment.modal.fade aria-labelledby="#paymentLabel" role="dialog" tabindex="-1"
   .modal-dialog role="document"
