--- a/app/views/users/votes.html.erb
+++ b/app/views/users/votes.html.erb
@@ -55,10 +55,11 @@
 
 <div class="votes-users">
   <%- @users.each do |user| %>
-    <div class="votes-user">
-      <%#= render partial: "shared/anketa_mini", locals: {user: user} %>
-      <%= render partial: "users_grid/item", locals: {user: user, className: 'votesList'} %>
-    </div>
+    <%- unless user.is_disqualify %>
+      <div class="votes-user">
+        <%= render partial: "users_grid/item", locals: {user: user, className: 'votesList'} %>
+      </div>
+    <% end %>
   <% end %>
 </div>
 <%= paginate @users, params: {controller: 'users', action: 'votes'} %>
