--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -1,6 +1,6 @@
 h1.home-title#about
-  .home-title-slogan Всероссийский конкурс красоты представительниц туриндустрии
-  .home-title-text Мисс Туризм 2018
+  .home-title-slogan Всероссийский отраслевой конкурс представительниц туриндустрии
+  .home-title-text Мисс Туризм профи 2018
 
 
 .about-text.about-text_1 Твоя красота затмит пейзажи Доминиканы и Мальдив? Ты удивительна, как розовое озеро Сенегала, и  интересна, как фауна Мадагаскара? Твой ум острее Эвереста, а чувство юмора искромётнее вулкана Этна? Ты работаешь в сфере туризма и старше восемнадцати?
@@ -24,7 +24,7 @@ h1.home-title#about
   .about-row-left.about-row-left_2
     .about-text.about-text_3
       p
-        |Зажигательный полуфинал случится 19 сентября на Partisan Luxury Party в рамках
+        |Зажигательный полуфинал случится 25 сентября на Partisan Luxury Party в рамках
         |&nbsp;
         a target="_blank" href="http://www.itif-forum.ru/" Международного Туристического Инвестиционного Форума ITIF
         |.
