--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? && policy(@user).is_voted? %>
+<% if user_signed_in? && policy(@user).is_voted? && VOTES_AVIALABLE %>
   <div style="padding: 80px 0">
     <div class="row">
       <div class="col-md-6">
@@ -87,33 +87,35 @@
 
 
 
-      <% unless @user.is_disqualify %>
-        <% if user_signed_in? && policy(@user).user? %>
-          <% if VotesQuery.new.is_votes(current_user, @user.number) %>
-            <div class="vote-btn-container text-center">
-              <%= link_to voteable_path(@user),
-                          class:  'vote-btn',
-                          remote: true do %>
-                Проголосовать
-                <%= image_tag asset_pack_path 'packs/img/icon-like-red.svg' %>
-              <% end %>
-            </div>
+      <% if VOTES_AVIALABLE %>
+        <% unless @user.is_disqualify %>
+          <% if user_signed_in? && policy(@user).user? %>
+            <% if VotesQuery.new.is_votes(current_user, @user.number) %>
+              <div class="vote-btn-container text-center">
+                <%= link_to voteable_path(@user),
+                            class:  'vote-btn',
+                            remote: true do %>
+                  Проголосовать
+                  <%= image_tag asset_pack_path 'packs/img/icon-like-red.svg' %>
+                <% end %>
+              </div>
+            <% else %>
+              <div class="vote-btn-container text-center">
+                <%= link_to voteable_path(@user),
+                            class:  'btn btn-primary',
+                            remote: true do %>
+                  Отозвать свой голос
+                <% end %>
+              </div>
+            <% end %>
           <% else %>
             <div class="vote-btn-container text-center">
-              <%= link_to voteable_path(@user),
-                          class:  'btn btn-primary',
-                          remote: true do %>
-                Отозвать свой голос
-              <% end %>
+              <a href="#" class="vote-btn" data-toggle="modal" data-target="#myModal">
+                Проголосовать
+                <%= image_tag asset_pack_path 'packs/img/icon-like-red.svg' %>
+              </a>
             </div>
           <% end %>
-        <% else %>
-          <div class="vote-btn-container text-center">
-            <a href="#" class="vote-btn" data-toggle="modal" data-target="#myModal">
-              Проголосовать
-              <%= image_tag asset_pack_path 'packs/img/icon-like-red.svg' %>
-            </a>
-          </div>
         <% end %>
       <% end %>
       <% if user_signed_in? && policy(current_user).show_member_voteable? %>
@@ -124,10 +126,10 @@
         <hr>
       <% end %>
 
-      <% if false %>
+      <% unless VOTES_AVIALABLE %>
         <div class="vote-btn-container text-center">
                 <span class="vote-btn vote-btn_final">
-                  Подсчет голосов завершен
+                  Голосование окончено
                 </span>
         </div>
       <% end %>
