--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -11,53 +11,56 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
       .header-hero
         / h1.header-title Мисс Туризм Россия 2017!
         - if user_signed_in?
-            h1.header-title= current_user.name
-            - if policy(current_user).contestant?
-              = link_to "Моя анкета", user_path(current_user), class: 'btn btn-primary', style: "margin: 0 16px 0 0"
-            -else
+          h1.header-title= current_user.name
+          - if policy(current_user).contestant?
+            = link_to "Моя анкета", user_path(current_user), class: 'btn btn-primary', style: "margin: 0 16px 0 0"
+          - else
+            - if VOTES_AVIALABLE
               = link_to 'Голосовать', votes_path, class: 'btn btn-primary', style: "margin: 0 16px 0 0"
-            = link_to 'Выход', destroy_user_session_path, :method => 'delete', class: 'btn btn-default'
+          = link_to 'Выход', destroy_user_session_path, :method => 'delete', class: 'btn btn-default'
         - else
           h1.header-title Всероссийский отраслевой конкурс Мисс Туризм!
           - if (REGISTRATION_END_DATE - Date.current).to_i > 0
             button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="width: 250px;margin: 0 0 16px" Участвовать
-          button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal3" style="width: 250px;" Голосовать
+          - if VOTES_AVIALABLE
+            button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal3" style="width: 250px;" Голосовать
         = link_to "Хочу на финал", orders_path, class: "btn btn-primary btn-lg", style: "width: 250px;margin: 16px 0 0 0"
 
+- if (REGISTRATION_END_DATE - Date.current).to_i > 0
+  #myModal.modal.fade aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
+    .modal-dialog role="document"
+      .modal-content
+        .modal-header
+          button.close aria-label="Close" data-dismiss="modal" type="button"
+            span aria-hidden="true"  &times;
+          h4#myModalLabel.modal-title Для участия авторизуйтесь через
+        .modal-body
+          - unless user_signed_in?
+            .b-sign-in
+              .b-sign-in-buttons
+                = link_to user_facebook_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-fb' do
+                  = image_tag asset_pack_path 'packs/img/login-fb.svg'
+                = link_to user_vkontakte_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-vk' do
+                  i.fa.fa-vk.fa-fw
+                  span VKONTAKTE
 
-#myModal.modal.fade aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
-  .modal-dialog role="document"
-    .modal-content
-      .modal-header
-        button.close aria-label="Close" data-dismiss="modal" type="button"
-          span aria-hidden="true"  &times;
-        h4#myModalLabel.modal-title Для участия авторизуйтесь через
-      .modal-body
-        - unless user_signed_in?
-          .b-sign-in
-            .b-sign-in-buttons
-              = link_to user_facebook_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-fb' do
-                = image_tag asset_pack_path 'packs/img/login-fb.svg'
-              = link_to user_vkontakte_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-vk' do
-                i.fa.fa-vk.fa-fw
-                span VKONTAKTE
-
-#myModal3.modal.fade aria-labelledby="myModal3Label" role="dialog" tabindex="-1"
-  .modal-dialog role="document"
-    .modal-content
-      .modal-header
-        button.close aria-label="Close" data-dismiss="modal" type="button"
-          span aria-hidden="true"  &times;
-        h4#myModal3Label.modal-title Для голосования авторизуйтесь через
-      .modal-body
-        - unless user_signed_in?
-          .b-sign-in
-            .b-sign-in-buttons
-              = link_to user_facebook_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-fb' do
-                = image_tag asset_pack_path 'packs/img/login-fb.svg'
-              = link_to user_vkontakte_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-vk' do
-                i.fa.fa-vk.fa-fw
-                span VKONTAKTE
+-if VOTES_AVIALABLE
+  #myModal3.modal.fade aria-labelledby="myModal3Label" role="dialog" tabindex="-1"
+    .modal-dialog role="document"
+      .modal-content
+        .modal-header
+          button.close aria-label="Close" data-dismiss="modal" type="button"
+            span aria-hidden="true"  &times;
+          h4#myModal3Label.modal-title Для голосования авторизуйтесь через
+        .modal-body
+          - unless user_signed_in?
+            .b-sign-in
+              .b-sign-in-buttons
+                = link_to user_facebook_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-fb' do
+                  = image_tag asset_pack_path 'packs/img/login-fb.svg'
+                = link_to user_vkontakte_omniauth_authorize_path, class: 'b-sign-in-button b-sign-in-button-vk' do
+                  i.fa.fa-vk.fa-fw
+                  span VKONTAKTE
 
 #myModal1.modal.fade aria-labelledby="#myModal1Label" role="dialog" tabindex="-1"
   .modal-dialog role="document"
