--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -18,7 +18,8 @@ h1.home-title#about
         - unless user_signed_in?
           button style="width: 300px" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" Зарегистрироваться
       - else
-        button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal3" style="width: 300px" Голосовать
+        -if VOTES_AVIALABLE
+          button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal3" style="width: 300px" Голосовать
 
 / .about-row.about-row_2
   .about-row-left.about-row-left_2
