--- a/app/views/shared/_counters.slim
+++ b/app/views/shared/_counters.slim
@@ -18,6 +18,11 @@
             = distance_of_time_in_words_to_now(VOTES_END_DATE, scope: 'datetime.distance_in_words.short')
           .counter-label
             |до окончания голосования
+        - if POLUFINAL_AVIALABLE
+          .counter-item
+            = distance_of_time_in_words_to_now(POLUFINAL_END, scope: 'datetime.distance_in_words.short')
+          .counter-label
+            |до оглашения полуфиналисток
 
       - cache @votes_count do
         .counter
