--- a/app/javascript/packs/_users_grid.scss
+++ b/app/javascript/packs/_users_grid.scss
@@ -177,6 +177,12 @@
 	opacity: 0;
 }
 
+.semifinal{
+	.usersGrid-number {
+		opacity: 1;
+	}
+}
+
 .usersGrid-bar {
 	position: absolute;
 	left: 0;
