--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -25,6 +25,9 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
           - if VOTES_AVIALABLE
             button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal3" style="width: 250px;" Голосовать
         = link_to "Хочу на финал", orders_path, class: "btn btn-primary btn-lg", style: "width: 250px;margin: 16px 0 0 0"
+        - semifinalUsers = SemifinalQuery.new.call()
+        -if semifinalUsers.present?
+          = link_to "Полуфиналистки", semifinal_path, class: "btn btn-success btn-lg", style: "width: 250px;margin: 16px 0 0 0"
 
 - if (REGISTRATION_END_DATE - Date.current).to_i > 0
   #myModal.modal.fade aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
