--- a/app/views/shared/_counters.slim
+++ b/app/views/shared/_counters.slim
@@ -22,7 +22,7 @@
           .counter-item
             = distance_of_time_in_words_to_now(POLUFINAL_END, scope: 'datetime.distance_in_words.short')
           .counter-label
-            |до оглашения полуфиналисток
+            |до проведения полуфинала
 
       - cache @votes_count do
         .counter
