--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="container-footer">
 
       <div class="footer-logo">
-        <%= image_tag(asset_pack_path('packs/img/logo-2018-new.png'), class: 'logo') %>
+        <%= render 'shared/logo' %>
       </div>
 
       <div>
