--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -122,6 +122,14 @@
           <%= image_tag(asset_pack_path('packs/img/partners/hotline.png'), size: "150x150") %>
         </a>
 
+        <a
+          class="partners-link"
+          href="#"
+          target="_blank"
+        >
+          <%= image_tag(asset_pack_path('packs/img/partners/miss.png'), size: "250x203") %>
+        </a>
+
         <!--
       <a
         class="partners-link"
