--- a/app/views/shared/_about.slim
+++ b/app/views/shared/_about.slim
@@ -1,6 +1,6 @@
 h1.home-title#about
   .home-title-slogan Всероссийский отраслевой конкурс представительниц туриндустрии
-  .home-title-text Мисс Туризм Профи 2018
+  .home-title-text Мисс&Миссис Туризм 2018
 
 
 .about-text.about-text_1 Твоя красота затмит пейзажи Доминиканы и Мальдив? Ты удивительна, как розовое озеро Сенегала, и  интересна, как фауна Мадагаскара? Твой ум острее Эвереста, а чувство юмора искромётнее вулкана Этна? Ты работаешь в сфере туризма и старше восемнадцати?
