--- a/app/views/shared/_jury.html.erb
+++ b/app/views/shared/_jury.html.erb
@@ -103,6 +103,32 @@
       </div>
     </div>
 
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('packs/img/jury/mishenko.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Кристина Мищенко
+      </div>
+      <div class="jury-item-info">
+        Модель, актриса,
+        <br>
+        Миссис Европа 2015 в Испании,
+        <br>
+        Миссис Вселенная 2016 в Америке,
+        <br>
+        Миссис Престиж 2018 во Франции
+        <br>
+        Основатель
+        <br>
+        Миссис Россия - Вселенная в Москве,
+        <br>
+        Руководитель Детских модельных
+        <br>
+        школ Fashion Kids в России
+      </div>
+    </div>
+
     <!--
     <div class="jury-item">
       <div class="jury-item-photo">
