--- a/app/views/shared/_jury.html.erb
+++ b/app/views/shared/_jury.html.erb
@@ -129,6 +129,32 @@
       </div>
     </div>
 
+    <div class="jury-item">
+      <div class="jury-item-photo">
+        <%= image_tag(asset_pack_path('packs/img/jury/ShowMens.jpg'), size: "180x180") %>
+      </div>
+      <div class="jury-item-name">
+        Роман ГОЛДенберг
+      </div>
+      <div class="jury-item-info">
+        Основатель и главный редактор
+        <br>
+        федеральной сети глянцевых журналов
+        <br>
+        о ярких личностях твоего города
+        <br>
+        ShowMens & ShowWomеns (ШоуМенС и ШоуВуменС),
+        <br>
+        а так же одноименного спутникового
+        <br>
+        телеканала светской хроники,
+        <br>
+        Джетнтльмен Меценат 2017",
+        <br>
+        по версии, премии "Джентльмен года"
+      </div>
+    </div>
+
     <!--
     <div class="jury-item">
       <div class="jury-item-photo">
