--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -130,6 +130,14 @@
           <%= image_tag(asset_pack_path('packs/img/partners/miss.png'), size: "250x203") %>
         </a>
 
+        <a
+          class="partners-link"
+          href="#"
+          target="_blank"
+        >
+          <%= image_tag(asset_pack_path('packs/img/partners/show-women.jpg'), size: "220x220") %>
+        </a>
+
         <!--
       <a
         class="partners-link"
