замена фразу дисквалифицированна на "выбыла из участия"

--- a/app/views/shared/_anketa_mini.erb
+++ b/app/views/shared/_anketa_mini.erb
@@ -27,7 +27,7 @@
           Участница
         </div>
         <div>
-          дисквалифицированна
+          выбыла из участия
         </div>
       </div>
     <% end %>
