--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,7 +48,7 @@
   <div class="profile-position">
     <%- if @user.is_disqualify %>
       <div class="alert alert-danger text-center">
-        Участница дисквалифицированна
+        Участница выбыла из участия
       </div>
     <% else %>
       <%= render 'users/anketa_count' %>
