замена фразу у дисквалифицированных

--- a/app/views/shared/_anketa_mini.erb
+++ b/app/views/shared/_anketa_mini.erb
@@ -24,10 +24,10 @@
     <% else %>
       <div class="user-disqualify">
         <div>
-          Участница
+          Более не
         </div>
         <div>
-          выбыла из участия
+          участвует в конкурсе
         </div>
       </div>
     <% end %>
