--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -29,6 +29,9 @@
             <a class="footer-contacts-link" href="https://www.facebook.com/MissTurizm.ru/" target="_blank">
               <%= image_tag(asset_pack_path('packs/img/icon-fb.svg'), size: "40x40") %>
             </a>
+            <a class="footer-contacts-link" href="https://vk.com/missmissistourism" target="_blank">
+              <%= image_tag(asset_pack_path('packs/img/icon-vk.svg'), size: "40x40") %>
+            </a>
           </div>
 
         </div>
