--- a/app/views/shared/_partners.html.erb
+++ b/app/views/shared/_partners.html.erb
@@ -132,10 +132,26 @@
 
         <a
           class="partners-link"
-          href="#"
+          href="https://www.instagram.com/showmens.top/"
           target="_blank"
         >
           <%= image_tag(asset_pack_path('packs/img/partners/show-women.jpg'), size: "220x220") %>
+        </a>
+
+        <a
+          class="partners-link"
+          href="http://www.studioformatpro.ru/"
+          target="_blank"
+        >
+          <%= image_tag(asset_pack_path('packs/img/partners/sfp.png'), size: "250x176") %>
+        </a>
+
+        <a
+          class="partners-link"
+          href="http://dashkov5.ru/tickets"
+          target="_blank"
+        >
+          <%= image_tag(asset_pack_path('packs/img/partners/logo_vernuvshiesya_black.png'), size: "280x93") %>
         </a>
 
         <!--
