изменяет тексты и добавляет финалисток на сайт

--- a/app/views/header/_header.html.slim
+++ b/app/views/header/_header.html.slim
@@ -26,9 +26,8 @@ header class="#{request.fullpath != '/' && 'header-collapse'}"
             button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal3" style="width: 250px;" Голосовать
         = link_to "Хочу на финал", orders_path, class: "btn btn-primary btn-lg", style: "width: 250px;margin: 16px 0 0 0"
         = link_to "Хочу на полуфинал", 'https://missturizm.timepad.ru/event/804723/', target: "_blank", class: "btn btn-success btn-lg", style: "width: 250px;margin: 16px 0 0 0"
-        - semifinalUsers = SemifinalQuery.new.call()
         -if true
-          = link_to "Полуфиналистки", semifinal_path, class: "btn btn-success btn-lg", style: "width: 250px;margin: 16px 0 0 0"
+          = link_to "Финалистки", final_path, class: "btn btn-success btn-lg", style: "width: 250px;margin: 16px 0 0 0"
 
 - if (REGISTRATION_END_DATE - Date.current).to_i > 0
   #myModal.modal.fade aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
