--- a/app/views/orders/index.slim
+++ b/app/views/orders/index.slim
@@ -1,5 +1,5 @@
 - title = 'Регистрация на финал конкурса «Мисс Туризм» 2018'
-- desc = 'Приглашаем директоров и руководителей туристических компаний на финал конкурса Мисс Туризм 2018, который пройдёт с 17 по 20 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5!'
+- desc = 'Приглашаем на финал конкурса Мисс&Миссис Туризм 2018, который пройдёт с 17 по 20 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5!'
 - content_for :title do
   = title
 - content_for :description do
@@ -8,7 +8,7 @@
 = render partial: "shared/meta_og", locals: {title: title, desc: desc, photo: nil}
 
 h1.page-header Регистрация на финал
-.order-lead Приглашаем директоров и руководителей туристических компаний на финал конкурса Мисс Туризм 2018, который пройдёт с 17 по 20 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5!
+.order-lead Приглашаем на финал конкурса Мисс&Миссис Туризм 2018, который пройдёт с 17 по 20 октября на мифическом греческом острове Крит, в роскошном отеле Aldemar Knossos Royal Family 5!
 
 
 h2.order-subtitle Выберите вариант пакета участника
