--- a/app/views/shared/_counters.slim
+++ b/app/views/shared/_counters.slim
@@ -18,11 +18,17 @@
             = distance_of_time_in_words_to_now(VOTES_END_DATE, scope: 'datetime.distance_in_words.short')
           .counter-label
             |до окончания голосования
-        - if POLUFINAL_AVIALABLE
+        - if POLUFINAL_AVIALABLE && false
           .counter-item
             = distance_of_time_in_words_to_now(POLUFINAL_END, scope: 'datetime.distance_in_words.short')
           .counter-label
             |до проведения полуфинала
+
+        - if FINAL_AVIALABLE
+          .counter-item
+            = distance_of_time_in_words_to_now(FINAL_END, scope: 'datetime.distance_in_words.short')
+          .counter-label
+            |до проведения финала
 
       - cache @votes_count do
         .counter
